Trivia-App 1.0 Releasing  & debug the output during release the app

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="wrong_answer">InCorrect!</string>
     <string name="score_0">Score : 0</string>
     <string name="highest_score">Highest Score :</string>
+    <string name="creater_zanhd">Creater : zanHD</string>
 </resources>
